# home-bookshelf-management-v1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  task-list.md
.claude/: settings.json
.claude/hooks/: tasklist_sync_reminder.sh
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  install.bat  install.sh  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a5bfb4c64f04_initial_schema.py  b7e2a1c904f3_hardening_isbn10_index.py  c8d9e0f1a2b3_hardening_server_defaults.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  base.py  book.py  extension.py  member.py  tag.py
backend/app/schemas/: attachment.py  book.py  copy.py  custom_field.py  intake.py  member.py  note.py  purchase.py  reading.py  reading_log.py  stats.py
backend/app/services/: attachments.py  books.py  copies.py  cover_recognition.py  custom_fields.py  intake.py  members.py  notes.py  purchase.py  reading.py  reading_logs.py  recognition.py  stats.py  storage.py
backend/app/utils/: db_errors.py  (+5 more)
cli/: pyproject.toml
cli/bookshelf/: client.py  doctor.py  main.py
deploy/: .env.example  backup.sh  docker-compose.yml
deploy/systemd/: bookshelf.env.example  bookshelf.service
docs/: ISBN元数据API调研.md  task-list-standardize-report.md  参考项目调研.md  家庭图书管理系统-设计方案.md  数据库Schema对照与一期细化.md
skills/: README.md
skills/book-intake/: SKILL.md
skills/book-query/: SKILL.md
skills/bookshelf-setup/: SKILL.md
skills/note-taker/: SKILL.md
skills/purchase-logger/: SKILL.md
skills/reading-tracker/: SKILL.md
skills/shelf-report/: SKILL.md
(+21 files in other folders)
